[package]
name = "stm32f103-helloworld"
version = "0.1.0"
authors = ["codeandbacon"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
panic-halt = "0.2.0"
nb = "0.1.2"

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt", "medium"]
version = "0.6.1"